# NEWS-RAPTOR-Research

./: .entrypoint.sh  .gitignore  Dockerfile  LICENSE  README.md  collect_news.sh  pyproject.toml
app/: config.py  main.py  vectordb.py
app/assistant/: __init__.py  graph.py  state.py
app/collector/: __init__.py  korean_news_collector.py  korean_rag_news_collector.py  korean_raptor_news_collector.py
app/rag/: insert_vectordb.py  rag_vectordb_insert.py
app/raptor/: raptor_vectordb_insert.py
app/vectordb/: vectordb.py
data/20230826/: '국군의 날' 임시공휴일 추진.xlsx  오늘 김문수 고용노동부 장관 후보자 청문회.xlsx  해리스, 출마 선언 후 7,000억원 모금.xlsx  헤즈볼라 이어 하마스도 이스라엘 공격.xlsx  현대차 전기차, 美·유럽 안전평가 최고.xlsx
data/20230827/: 법원, MBC 방문진 새 이사 임명 제동.xlsx  삼성 준감위, 한경협 회비 납부 승인.xlsx  은행권, 대출 만기·한도 축소.xlsx  이스라엘-헤즈볼라 대규모 공방.xlsx
data/20230828/: 복지위, 28일 본회의 전 간호법 막판 논의 추진.xlsx  한동훈, 이재명 퇴원 앞두고 '금투세 폐지' 여론전.xlsx
data/20230829/: 간호법·전세사기법·구하라법 본회의 통과.xlsx  보건의료노조, 62개 기관 중 59개 타결.xlsx  엔비디아 실적, 예상치 넘었지만 주가는 하락.xlsx  트럼프-해리스 첫 TV 토론 예정대로 9월 10일 진행.xlsx  현대차 10년간 120조 투자 계획.xlsx
data/20230830/: '등산로 살인' 최윤종 무기징역 확정…사회와 격리.xlsx  국내 첫 '기후 위기' 헌법소원 오늘 선고.xlsx  증원은 마무리, 의료개혁 집중…당정, 문제 없어.xlsx  한동훈-이재명 내달 1일 만난다…의제 갖춘 첫 회담.xlsx
data/20240826/: 尹 대통령, 이번주 국민연금 개혁안 직접 발표.xlsx  금감원, '우리은행 부당대출' 현 경영진 제재 시사.xlsx  부천 화재 사망자 발인 시작.xlsx  이재명 `尹정부 독도 지우기 의혹` 진상조사 지시.xlsx  정부, 보건의료노조 파업 예고에 필수의료 공백 없도록 노력.xlsx
data/20240827/: '김건희 여사 명품백 수수' 사건 수사심의위 소집.xlsx  김문수 일제시대 국적이 있었느냐 발언에 청문회 파행.xlsx  대통령실 야당 '독도 지우기' 괴담으로 또 선동.xlsx  전국보건의료노조 29일 총파업 예고.xlsx  텔레그램 딥페이크 피해 학교 목록 확산.xlsx  한동훈·이재명 여야 대표회담 추석 전 비공개.xlsx
data/20240828/: SK이노베이션·E&S 합병안 주총에서 통과.xlsx  금감원 가계부채 초과 은행 패널티.xlsx  내년 예산안 677조원 발표, 2년 연속 긴축.xlsx  딥페이크 피해학교 명단에 불안 확산.xlsx  트럼프 해리스와 9월10일 TV토론 합의.xlsx  하이브, 민희진 어도어 대표 해임.xlsx  한동훈, 대통령실 의대 증원 연기 거부에도 재차 요구.xlsx  한은, 서울대에 '지역별 비례 선발제' 도입 제안.xlsx
data/20240829/: 기업이 20년 이상 운영하는 '장기 임대주택' 추진.xlsx  당정, 딥페이크 성범죄 관련 대응·지원 방안 논의.xlsx  만찬 회동 연기 의대 증원 유예하면 큰 혼란.xlsx  우리금융, 동양·ABL생명 1.5조에 인수.xlsx  정부, 추석 성수품 역대 최대 17만 톤 공급.xlsx
data/20240830/: '국가 지급 보장' 법문화…청년세대 수긍할 개혁.xlsx  (+5 more)
flagged/: log.csv
result/: test_raptor_result_1_cluster.csv  test_raptor_result_1_summary.csv  test_raptor_result_2_cluster.csv  test_raptor_result_2_summary.csv
test/: chunk_test.csv  news_sample.txt  test_chunk_length_check.py  test_insert_rag.py  test_insert_raptor.py  test_rag.py  test_raptor.py  test_raptor_result.ipynb  test_summary_query.py  test_topic.ipynb  test_web_loader.py  web_loader_test.py
validation/: Day_Issue_QA_data_set.xlsx  Specific_News_QA_data_set.xlsx  Specific_News_QA_result_set.xlsx  Specific_Topic_QA_data_set.xlsx  Week_Issue_QA_data_set.xlsx  validation.ipynb  주간이슈.csv
(+4 files in other folders)
