[tool.poetry]
name = "korean-news-raptor"
version = "0.1.0"
description = ""
authors = ["yunyoseob <imyoseob@naver.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11"
python-dotenv = "^1.0.1"
openai = "^1.32"
gradio = "^5.0.1"
openpyxl = "^3.1.5"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
pandas = "^2.2.2"
bs4 = "^0.0.2"
langchain-openai = "^0.1.20"

psycopg = {extras = ["binary"], version = "^3.1.19"}
pgvector = "^0.2.5"
langchain-postgres = "^0.0.6"
umap = "^0.1.1"
umap-learn = "^0.5.6"

scikit-learn = "^1.5.1"
pydantic-settings = "^2.4.0"
unstructured = "^0.15.9"
newspaper3k = "^0.2.8"
lxml = {extras = ["html-clean"], version = "^5.3.0"}
lxml-html-clean = "^0.2.2"
langgraph = "^0.2.21"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
